--- a/index.html
+++ b/index.html
@@ -1,123 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
-    <title>Plan</title>
-  </head>
-  <body>
-    <h1>Siz uchun eng qulay tarifni tanlang!</h1>
-    <section>
-      <div class="card">
-        <div class="card-header">
-          <h1>Standart</h1>
-          <p>Oddiy ko'p funksiyalardan tashkil topmagan website</p>
-        </div>
-        <div class="card-price">
-          <h1>2 mln</h1>
-        </div>
-        <h4>Qulayliklar</h4>
-        <div class="card-features">
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Malumot qo'shish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Barcha qurilmalarda foydalana olish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Yordam muddati: 1 oy</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header">
-          <h1>Premium</h1>
-          <p>Tez, funksiyalarga boy va havfsiz website turi</p>
-        </div>
-        <div class="card-price">
-          <h1>4 mln</h1>
-        </div>
-        <h4>Qulayliklar</h4>
 
-        <div class="card-features">
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Malumot qo'shish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Barcha qurilmalarda foydalana olish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Yordam muddati: 6 oy</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Tavarlarni saralash <span id="filter">?</span></p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>
-              Tavarlarni chegaralangan narxda topsih <span id="limit">?</span>
-            </p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>1 oy ichida website ko'rinishini o'zgartirish</p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css" />
+  <title>Plan</title>
+</head>
+
+<body>
+  <!-- <h1>Siz uchun eng qulay tarifni tanlang!</h1> -->
+  <section>
+    <div class="card">
+      <div class="card-header">
+        <h1>Standart</h1>
+        <p>Oddiy ko'p funksiyalardan tashkil topmagan website</p>
+      </div>
+      <div class="card-price">
+        <h1>2 mln</h1>
+      </div>
+      <h4>Qulayliklar</h4>
+      <div class="card-features">
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Malumot qo'shish</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Barcha qurilmalarda foydalana olish</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Yordam muddati: 1 oy</p>
         </div>
       </div>
-      <div class="card">
-        <div class="card-header">
-          <h1>VIP</h1>
-          <p>Eng sifatli eng murakkab website</p>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <h1 class="vip">VIP</h1>
+        <p>Eng sifatli va eng murakkab website</p>
+      </div>
+      <div class="card-price">
+        <h1>5.5 mln <img src="./imgs/cr.svg"></h1>
+      </div>
+      <h4>Qulayliklar</h4>
+      <div class="card-features">
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Malumot qo'shish</p>
         </div>
-        <div class="card-price">
-          <h1>5.5 mln</h1>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Barcha qurilmalarda foydalana olish</p>
         </div>
-        <h4>Qulayliklar</h4>
-        <div class="card-features">
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Malumot qo'shish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Barcha qurilmalarda foydalana olish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Yordam muddati: 1 yil</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>Tavarlarni saralash <span id="filter">?</span></p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>
-              Tavarlarni chegaralangan narxda topsih <span id="limit">?</span>
-            </p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>3 oy ichida website ko'rinishini o'zgartirish</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>murakkab funksiyalar</p>
-          </div>
-          <div class="card-feature">
-            <img src="./imgs/check.png" />
-            <p>mashhur websitelardek ajoyib</p>
-          </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Yordam muddati: 1 yil</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Tavarlarni saralash <span id="filter">?</span></p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>
+            Tavarlarni chegaralangan narxda topsih <span id="limit">?</span>
+          </p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>3 oy ichida website ko'rinishini o'zgartirish</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>murakkab funksiyalar</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>mashhur websitelardek ajoyib</p>
         </div>
       </div>
-    </section>
-  </body>
+    </div>
+    <div class="card">
+      <div class="card-header">
+        <h1>Premium</h1>
+        <p>Tez, funksiyalarga boy va havfsiz website turi</p>
+      </div>
+      <div class="card-price">
+        <h1>4 mln <img src="./imgs/pr.svg"></h1>
+      </div>
+      <h4>Qulayliklar</h4>
+
+      <div class="card-features">
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Malumot qo'shish</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Barcha qurilmalarda foydalana olish</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Yordam muddati: 6 oy</p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>Tavarlarni saralash <span id="filter">?</span></p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>
+            Tavarlarni chegaralangan narxda topsih <span id="limit">?</span>
+          </p>
+        </div>
+        <div class="card-feature">
+          <img src="./imgs/check.png" />
+          <p>1 oy ichida website ko'rinishini o'zgartirish</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <button class="select">trafik tanlang</button>
+  <!-- <div class="overlay">
+    <div class="hidden_card">
+      <p>Trafikni tanlang</p>
+    </div>
+  </div> -->
+</body>
+
 </html>
