--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img src="./imgs/check.png" />
             <p>
               Olingan zakazlar admin ni telegramiga yoki websiteni o'ziga habar
-              beradish
+              beriladi
             </p>
           </div>
           <div class="card-feature">
