--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
           <div class="card-feature">
             <img src="./imgs/check.png" />
             <p>
-              Olingan zakazlar admin ni telegramiga yoki websiteni o'ziga habar
-              beriladi
+              Olingan zakazlarni telegramga yoki wesbitega habar berish
             </p>
           </div>
           <div class="card-feature">
